<resources>
    <string name="app_name">6Orbit</string>
    <string name="company_slogan">The Cloud Advantage</string>
    <string name="action_filter">Filter</string>
    <string name="action_delete">Delete</string>
    <string name="transition_contenet_topic">Poonam</string>
    <string name="action_skip">Skip</string>
    <string name="btn_start">Start</string>
    <string name="write_label">Introducing Process Automation Integrating Business Functions</string>
    <string name="share_label">Share your important moments with friends and family.</string>
    <string name="follow_label">Follow interesting genres and creators from around the world. </string>
    <string name="device_text">Process Automation Software is typically a suite of integrated applications that a company can use to collect,
                store, manage and interpret data from many business activities, including: Product planning, cost, manufacturing, service delivery, marketing and sales.</string>
    <string name="title_activity_chat_message">Chat</string>
    <string name="username_error">Please enter your Email Id</string>
    <string name="valid_email_error">Please enter valid Email Id</string>
    <string name="contact_type_error">Please select a contact type</string>
    <string name="password_error">Please enter your password</string>
    <string name="chat_message_broadcast_event">Chat-Message-Broadcast-Event</string>
    <string name="send_chat_message_broadcast_event">Send-Chat-Message-Broadcast-Event</string>
    <string name="logout_user_broadcast_event">Logout-User-Broadcast-Event</string>
    <string name="send_active_users_broadcast_event">Send-Active-Users-Broadcast-Event</string>
    <string name="pdf_app_error">No application is available to view PDF file.</string>
    <string name="excel_app_error">No application is available to view Excel file.</string>
    <string name="connect_server_failed">Couldn\'t connect to server. Please try again later. </string>
    <string name="domain">check_service</string>
    <string name="login">login</string>
    <string name="mask_config">mask_config</string>
    <string name="permission">permission</string>
    <string name="valid_access_token">check_login</string>
    <string name="follow_up_fetch">followup/fetch</string>
    <string name="profile_fetch">profile_info/fetch</string>
    <string name="notification">notification/feed</string>
    <string name="notification_read">notification/read</string>
    <string name="notification_update_read">notification/update_read</string>
    <string name="lead">lead/fetch</string>
    <string name="chat_contacts">chat/info</string>
    <string name="chat_messages">chat/fetch_message</string>
    <string name="send_message">chat/send_message</string>
    <string name="lead_add">lead/add</string>
    <string name="follow_up_add">followup/addFollowup</string>
    <string name="record_follow_up_task">followup/add</string>
    <string name="lead_edit">lead/edit</string>
    <string name="post_comment">notification/add_comment</string>
    <string name="chat_conversations">chat/chat_history</string>
    <string name="chat_set_image">chat/set_image</string>
    <string name="enquiry_task">enquiry/fetch</string>
    <string name="quotation_fetch">quotation/fetch</string>
    <string name="pending_invoice_task">customer/pending_invoice</string>
    <string name="vender_pending_invoice_task">vendor/pending_invoice</string>
    <string name="customer_fetch">customer/fetch</string>
    <string name="customer_wallet_email">customer_wallet_email</string>
    <string name="vendor_fetch">vendor/fetch</string>
    <string name="vendor_wallet_download_voucher">vendor/vendor_voucher_print</string>
    <string name="vendor_pending_invoice_download_voucher">vendor/pending_invoice_print</string>
    <string name="vendor_purchase_order_download">vendor/purchase_order_print</string>
    <string name="customer_wallet_download_voucher">customer/customer_wallet_print</string>
    <string name="manage_quotation_download_quotation">quotation/print_quotation</string>
    <string name="customer_pending_invoice_download_voucher">customer/pending_invoice_print</string>
    <string name="customer_order_details">customer/order_details</string>
    <string name="download_sales_order_task">customer/print_sales_order</string>
    <string name="vendor_order_list">vendor/purchase_order_list</string>
    <string name="vendor_consignment">vendor/consignment_list</string>
    <string name="vendor_invoices">vendor/pending_exclusive_invoices</string>
    <string name="customer_invoices">customer/pending_exclusive_invoices</string>
    <string name="customer_order_info">customer/fetch_order_info</string>
    <string name="customer_packages_info">customer/fetch_order_package_info</string>
    <string name="customer_order_collection_info">customer/fetch_order_collection_info</string>
    <string name="customer_order_items">customer/fetch_order_products</string>
    <string name="add_customer_dynamic_fields">customer/fetch_addCustomer_form_data</string>
    <string name="add_customer_referrence_search">customer/customer_reference_search</string>
    <string name="add_customer_reference_contact_person">customer/reference_contact_person</string>
    <string name="add_customer_add_contact_person">customer/contact_detail_add</string>
    <string name="add_customer_get_cities">customer/get_cities</string>
    <string name="add_customer">customer/add_customer</string>
    <string name="quotation_details">quotation/quotation_details</string>
    <string name="vendor_consignment_info">vendor/consignment_info</string>
    <string name="quotation_products_task">quotation/quotation_products</string>
    <string name="vendor_inventory_items">vendor/consignment_items</string>
    <string name="edit_customer_task">customer/edit_customer</string>
    <string name="fetch_mobile_numbers">otp/otp-mobile-fetch</string>
    <string name="fetch_email_addresses">otp/otp-email-fetch</string>
    <string name="update_customer_details_task">customer/update_customer</string>
    <string name="quotation_search_item">quotation/search_item</string>
    <string name="quotation_product_details">quotation/load_item_data</string>
    <string name="products_details_scan_qr_code">quotation/fetch_barcode_data</string>
    <string name="customer_address_list">customer/customer_address_list</string>
    <string name="quotation_tax_charges_data">quotation/fetch_quotation_form_data</string>
    <string name="add_quotation">quotation/add_quotation</string>
    <string name="edit_quotation">quotation/quotation_edit_submit</string>
    <string name="quotation_templates">quotation/fetch_quotation_templates</string>
    <string name="order_templates_task">chkorder/fetch_order_templates</string>
    <string name="account_ledger_search_task">chkorder/account_ledger_search</string>
    <string name="create_order_task">chkorder/create_order_submit</string>
    <string name="followups_contact_person">followup/fetch_contact_person</string>
    <string name="order_prefilled_data_task">chkorder/fetch_order_formData</string>
    <string name="edit_order_info_task">chkorder/fetch_edit_order_info</string>
    <string name="convert_quotation_into_order_task">chkorder/fetch_order_formData_by_qoid</string>
    <string name="credential_error">Email and Password does not matched</string>
    <string name="toast_message">Toast Message</string>
    <string name="login_success">You have been successfully logged in</string>
    <string name="profile_edit_success">Profile successfully saved</string>
    <string name="password_change_success">Password successfully changed</string>
    <string name="email_added_successfully">Email is added successfully</string>
    <string name="phone_number_added_successfully">Phone Number is updated successfully</string>
    <string name="phone_number_verified_successfully">Phone Number is verified successfully</string>
    <string name="email_verified_successfully">Email is verified successfully</string>
    <string name="search_title">Search...</string>
    <string name="search_hint">Search.</string>
    <string name="fastscroller_track">FastScroller track</string>
    <string name="fastscroller_handle">FastScroller handle</string>
    <string name="item_string">Item %1$d</string>
    <string name="invalid_domain">Please enter valid domain</string>
    <string name="no_data_available">No data available</string>
    <string name="date_error">To date must be greater than the From date or it can\'t be empty</string>
    <string name="lbl_cancel">cancel</string>
    <string name="follow_up_fragment">Follow-Ups</string>
    <string name="navigation_view_activity">Home</string>
    <string name="record_follow_up">Record Follow Up</string>
    <string name="notification_fragment">Notification</string>
    <string name="chat_fragment">Chat</string>
    <string name="lead_fragment">Leads</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="activity_feeds">Activity Feeds</string>
    <string name="enquiry">Enquiry</string>
    <string name="add_customer_title">Add Customer</string>
    <string name="add_new_customer_title">Add a new Customer</string>
    <string name="lead_details">Lead Details</string>
    <string name="ledger_details">Ledger Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="contact_details">+ Add Contact</string>
    <string name="add_bank_details">+ Add Bank Details</string>
    <string name="add_details">Address Details</string>
    <string name="font_awesome">fontawesome-webfont.ttf</string>
    <string name="follow_up_alert_title">Follow-Up Alert</string>
    <string name="lead_info_title">Lead Info</string>
    <string name="order_details_title">Order Info</string>
    <string name="quotation_info_title">Quotation Info</string>
    <string name="enquiry_info_title">Enquiry Info</string>
    <string name="record_follow_up_title">Record Follow up</string>
    <string name="activity_feed_error_msg">There is no feed right now.</string>
    <string name="mine">Mine</string>
    <string name="all">All</string>
    <string name="section_format">Page %1$d</string>
    <string name="cuid">cuid</string>
    <string name="alid">alid</string>
    <string name="order_id">orderId</string>
    <string name="qo_id">quotationId</string>
    <string name="en_id">enquiryId</string>
    <string name="order_id_text">orderIdText</string>
    <string name="qo_id_text">quotationIdText</string>
    <string name="enquiry_id_text">enquiryIdText</string>
    <string name="venid">venid</string>
    <string name="consignment_id_text">consignmentText</string>
    <string name="consignment_id">consignmentId</string>
    <string name="qosid">quotationStatusId</string>
    <string name="convert_from">convertFrom</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="update">update</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="primary_status">Primary Number</string>
    <string name="verify">Verify</string>
    <string name="enter_otp_to_verify">Please enter OTP to verify your</string>
    <string name="Otp">OTP</string>
    <string name="problem_receiving_otp">Problem in receiving OTP ?</string>
    <string name="update_mobile">Update Mobile</string>
    <string name="enter_mobile_number">Enter mobile Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="yes">Yes</string>
    <string name="no_cancel">No, cancel</string>
    <string name="cancel_quotation_title">Cancel Quotation</string>
    <string name="cancel_quotation_confirm_message">Are you sure to cancel this quotation ?</string>
    <string name="cancel_quotation_hint">Give reason for cancel this quotation</string>
</resources>