<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/verify_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="@dimen/_16sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:gravity="left|center"
            android:text="@string/enter_otp_to_verify"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="@dimen/_11sdp"
            android:textStyle="normal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:clipToPadding="false"
            android:gravity="left|center"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <EditText
                android:id="@+id/edit_text_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_marginLeft="@dimen/_4sdp"
                android:fontFamily="sans-serif"
                android:hint="@string/Otp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/green_cursor"
                android:textSize="@dimen/_11sdp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/_8sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_verify"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginRight="@dimen/_8sdp"
                android:layout_weight="0.5"
                android:background="@color/green"
                android:elevation="@dimen/_5sdp"
                android:text="@string/verify"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/_32sdp"
                android:layout_weight="0.5"
                android:background="@color/gray"
                android:elevation="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_view_problem_receiving_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/_5sdp"
            android:gravity="center"
            android:text="@string/problem_receiving_otp"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btn_resend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:elevation="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="@dimen/_12sdp"
            android:visibility="visible" />
    </LinearLayout>

</RelativeLayout>