<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_8sdp"
        android:theme="@style/AppTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_quotation_title"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="@dimen/_14sdp"
            android:textStyle="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:gravity="left|center"
            android:text="@string/cancel_quotation_confirm_message"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:clipToPadding="false"
            android:gravity="left|center"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <EditText
                android:id="@+id/reason_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="sans-serif"
                android:hint="@string/cancel_quotation_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/green_cursor"
                android:textSize="@dimen/_11sdp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/ok_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:background="@color/green"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_6sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_11sdp" />

                <ProgressBar
                    android:id="@+id/dialog_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:indeterminateTint="@color/white"
                    android:visibility="invisible" />

            </RelativeLayout>

            <TextView
                android:id="@+id/cancel_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="0.5"
                android:background="@color/gray"
                android:gravity="center"
                android:paddingBottom="@dimen/_6sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text="@string/no_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>