<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_145sdp"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_4sdp"
        android:paddingTop="@dimen/_4sdp"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/primary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="sans-serif"
            android:text="@string/primary_status"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="@dimen/_13sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_margin="@dimen/_4sdp"
                android:background="@color/green"
                android:elevation="@dimen/_5sdp"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_32sdp"
                android:layout_margin="@dimen/_4sdp"
                android:background="@color/gray"
                android:elevation="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>